--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -1,40 +1,45 @@
-name: Request Screenshot or Video
+name: Auto-Merge on LGTM Comment
 
 on:
-  pull_request:
+  issue_comment:
     types:
-      - opened
+      - created
 
 permissions:
-  pull-requests: write 
+  contents: write  # Required to merge the PR
+  pull-requests: write  # Required to update PRs
 
 jobs:
-  comment_on_pr:
-    name: Request Screenshot/Video
+  auto_merge:
+    name: Auto-Merge on LGTM
+    if: ${{ startsWith(github.event.comment.body, 'lgtm') }}
     runs-on: ubuntu-latest
 
     steps:
-      - name: Comment on the PR
+      - name: Check if Comment is on a PR
+        id: check-pr
+        run: |
+          if [[ "${{ github.event.issue.pull_request.url }}" == "" ]]; then
+            echo "Not a pull request comment. Exiting."
+            exit 1
+          fi
+
+      - name: Merge Pull Request
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const { context } = require("@actions/github");
-            const prNumber = context.payload.pull_request.number;
+            const prNumber = context.payload.issue.number;
             const owner = context.payload.repository.owner.login;
             const repo = context.payload.repository.name;
 
-            const message = `
-            👋 Hello @${context.payload.pull_request.user.login}, thank you for opening this pull request! 
+            console.log(`Attempting to merge PR #${prNumber}`);
 
-            To help with the review process, could you please attach a **screenshot** or a **video** demonstrating the changes you've made? This will make it easier for reviewers to understand the impact of your contribution. 
-
-            Thank you for your efforts! 🚀
-            `;
-
-            await github.issues.createComment({
+            await github.pulls.merge({
               owner: owner,
               repo: repo,
-              issue_number: prNumber,
-              body: message
+              pull_number: prNumber,
+              merge_method: "squash", // Change to "merge" or "rebase" if needed
             });
+
+            console.log(`Successfully merged PR #${prNumber}`);
